service1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfrontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myfrontend.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myfrontend
                port:
                  number: 8081
